# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("daudio_effect_component") {
  include_dirs = [
    "./audiopipeline/include",
    "./pipelinemanager/include",
    "./elements/include",
    "./element_factoy/include",
    "${services_path}/common/audiodata/include",
    "${common_path}/include",
    "${fwk_common_path}/utils/include",
  ]

  sources = [
    "${services_path}/audioprocessor/effectcomponent/audiopipeline/src/pipeline_impl.cpp",
    "${services_path}/audioprocessor/effectcomponent/element_factoy/src/element_factory.cpp",
    "${services_path}/audioprocessor/effectcomponent/elements/src/down_stream_element.cpp",
    "${services_path}/audioprocessor/effectcomponent/elements/src/render_sink_element.cpp",
    "${services_path}/audioprocessor/effectcomponent/elements/src/source_element.cpp",
    "${services_path}/audioprocessor/effectcomponent/pipelinemanager/src/pipeline_manager.cpp",
  ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [ "c_utils:utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
