# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../distributedaudio.gni")

ohos_shared_library("distributed_audio_transport_status") {
  include_dirs = [
    "${fwk_common_path}/utils/include",
    "${mediastandard_path}/interfaces/innerkits/native/media/include",
    "${mediastandardfwk_path}/audiocommon/include",
  ]

  include_dirs += [
    "include",
    "interface",
    "${common_path}/include",
    "${audio_processor_path}/decoder/include",
    "${audio_processor_path}/decodeprocessor/include",
    "${audio_processor_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_transport_path}/audiotransportstatus/include",
    "${audio_transport_path}/audiotransportstatus/interface",
    "${audio_transport_path}/audiotransportstatus/interface",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
  ]

  sources = [
    "${audio_transport_path}/audiotransportstatus/src/audio_transport_context.cpp",
    "${audio_transport_path}/audiotransportstatus/src/audio_transport_pause_status.cpp",
    "${audio_transport_path}/audiotransportstatus/src/audio_transport_start_status.cpp",
    "${audio_transport_path}/audiotransportstatus/src/audio_transport_status_factory.cpp",
    "${audio_transport_path}/audiotransportstatus/src/audio_transport_stop_status.cpp",
  ]

  deps = [
    "${audio_transport_path}/audiochannel/audiodatachannel:distributed_audio_data_channel",
    "${services_path}/common:distributed_audio_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "player_framework:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
