# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../../distributedaudio.gni")

ohos_shared_library("distributed_audio_sink_sdk") {
  include_dirs = [
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//commonlibrary/c_utils/base/include",
    "${fwk_common_path}/utils/include",
    "//third_party/json/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${common_path}/dfx_utils/include",
  ]

  sources = [
    "src/daudio_sink_handler.cpp",
    "src/daudio_sink_load_callback.cpp",
    "src/daudio_sink_proxy.cpp",
  ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
