# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../../distributedaudio.gni")

group("daudio_manager_test") {
  testonly = true
  deps = [
    "${common_path}/dfx_utils/test/unittest:DAudioDfxTest",
    "${services_path}/audiomanager/test/unittest/managersink:manager_sink_test",
    "${services_path}/audiomanager/test/unittest/servicesink:DaudioSinkServiceTest",
    "${services_path}/audiomanager/test/unittest/servicesink:DaudioSinkStubTest",
    "${services_path}/audiomanager/test/unittest/servicesource:DaudioSourceServiceTest",
    "${services_path}/audiomanager/test/unittest/servicesource:DaudioSourceStubTest",
    "${services_path}/audiomanager/test/unittest/sourcedevice:daudio_source_dev_test",
    "${services_path}/audiomanager/test/unittest/sourcemanager:daudio_source_mgr_test",
    "${services_path}/common/test/unittest/audiodata:audio_data_test",
  ]
}
