# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../distributedaudio.gni")

module_out_path = "distributed_audio/services/softbusadapter"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${softbusadapter_path}/include",
    "//third_party/cJSON",
  ]
}

## UnitTest audio_soft_bus_adapter_test
ohos_unittest("SoftBusAdapterTest") {
  module_out_path = module_out_path

  sources = [ "src/softbus_adapter_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${softbusadapter_path}:distributed_audio_softbus_adapter",
    "//third_party/cJSON:cjson",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]
}

group("audio_soft_bus_adapter_test") {
  testonly = true
  deps = [ ":SoftBusAdapterTest" ]
}
